# dac_web

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  README.md  cmd.sh  requirements.txt
.github/workflows/: docker-image.yml  npm-publish.yml
backend/: README.md  analysis.py  app_entry.py  app_handler.py  mpl_bp.py  mpl_tornado.py  pyproject.toml  requirements.txt  router.py  router_entry.py  router_handler.py
backend/dac_web/: actions.py  auth.py  main.py  schema.py  webagg_starlette.py
backend/dac_web/api/: handler.py  rev_proxy.py
backend/dac_web/app/: __init__.py  entry.py  handler.py
backend/dac_web/db/: connection.py  schema.sql
backend/dac_web/import_replace/: __init__.py  discovery.py
backend/dac_web/router/: handler.py  rev_proxy.py
backend/dac_web/rules/: builtin.py
dac-frontend/: .gitignore  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
dac-frontend/src/: App.svelte  index.ts  router.ts  schema.d.ts  vite-env.d.ts
dac-frontend/src/lib/: ActionList.svelte  ContextList.svelte  DataList.svelte  DataNode.svelte  LogMessage.svelte  MplCanvas.svelte  SaveProjectDropdown.svelte  ScenarioList.svelte  StatsTable.svelte  (+1 more)
desktop/: __init__.py  bridge.py  config_panel.py  desktop_app.py  pywebview_bridge.py  pywebview_host.py  qt_bridge.py
doc/: GOALS.md  sketch.txt
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.mjs
frontend/src/: App.vue  main.js  utils.js
projects/: test.dac.json
projects_save/: example0-1
test/tornado_revproxy/: app_layer.py  router_layer.py
(+21 files in other folders)
