[project]
name = "dac_web-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.1",
    "httpx>=0.28.1",
    "matplotlib>=3.10.5",
    "miz-dac>=0.3.4",
    "tornado>=6.5.1",
]

[tool.setuptools.package-dir]
dac_web = "dac_web"