[project]
name = "dac_web-backend"
version = "0.1.1"
description = "DAC analysis on web, the backend handlers."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.1",
    "httpx>=0.28.1",
    "matplotlib>=3.10.5",
    "miz-dac>=0.4.0",
    "nest-asyncio>=1.6.0",
    "starlette>=0.47.2",
    "uvicorn>=0.35.0",
    "websockets>=15.0.1",
]

[tool.setuptools.package-dir]
dac_web = "dac_web"
